--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body class="container bg">
   	<main class="row">
   		<div id="circle"></div>
-  		<div class="content col-12 col-lg-8 offset-lg-1">
+  		<div class="content col-12 col-lg-7">
   			<h1>Yuka Koko: an experienced front-end web 🕸️ developer.</h1>
   			<h1>Currently making things at Jane Street out of  New York, NY 🗽.</h1>
   		</div>
-  		<footer class="col-12">
+  		<footer class="col-12 col-lg-7">
   			<ul>
   				<li>💼 <a href="https://www.linkedin.com/in/yukakoko/"> LinkedIn</a></li>
   				<li>📧 <a href="mailto:yukanagai@gmail.com">Email</a></li>
