--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<main class="row">
   		<div id="circle"></div>
   		<div class="content col-12 col-lg-7">
-  			<h1>Yuka Koko: an experienced front-end web 🕸️ developer.</h1>
+  			<h1>Hi, I'm Yuka Koko. An experienced front-end web 🕸️ developer.</h1>
   			<h1>Currently making things at Jane Street out of  New York, NY 🗽.</h1>
   		</div>
   		<footer class="col-12 col-lg-7">
